SERVER-86478 Distinguish empty and missing for bucket metadata (#19362)

(cherry picked from commit 4f3051ee15b358fe5f55894ade11b337cced07df)

GitOrigin-RevId: dc5cb2d11d845304c9aadd0ed8eb05ed72c2a8ca